--- a/app/src/main/res/layout/viewincidents_fragment.xml
+++ b/app/src/main/res/layout/viewincidents_fragment.xml
@@ -10,11 +10,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            android:fontFamily="sans-serif-black"
+            android:text="Incident Records"
+            android:textSize="25dp" />
 
-    <TextView
-        android:id="@+id/tvViewIncident"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/tvViewIncident"
+            android:layout_width="409dp"
+            android:layout_height="672dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="2dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginBottom="1dp"
+            android:scrollbars="vertical" />
 
     </RelativeLayout>
 
